--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
     <title>Vermillion Gym</title>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div id="pokeLogo">
+                <img src="images/pokemon-logo-vector.png" alt="Pokemon Logo">
+            </div>
+            <div id="vermillionHeader">
+                Vermillion Gym
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
     
 </body>
 </html>
