--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Vermillion Gym</title>
 </head>
 <body>
+    <!-- Create header with Pokemon logo and css animation for page name -->
     <div class="container">
         <div class="row">
             <div id="pokeLogo">
@@ -20,12 +21,51 @@
             </div>
         </div>
 
+    <!-- Creating score boxes -->
+    <div class="row">
+        <div class="flexContainer">
+            <div id="scoreBoxOne">
+
+            </div>
+
+            <div id="scoreBoxTwo">
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="flexContainer">
+            <div id="professorPokemon">
+                    <div id="oddishCircle"></div>
+                    <div id="gloomCircle"></div>
+                    <div id="weezingCircle"></div>
+            </div>
+
+            <div id="chuckPokemon">
+                <div id="dragonairCircle"></div>
+                <div id="butterfreeCircle"></div>
+                <div id="charmeleonCircle"></div>
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+    </div>
+
 
 
 
 
 
     </div>
-    
+
+    <script src="main.js"></script>
 </body>
 </html>
