--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="flexContainer">
+                <div id="grimName">
+                    Professor Grim
+                </div>
+                <div id="chuckName">
+                    Chuck
+                </div>
+            </div>
+
+        </div>
+
     <!-- Creating score boxes -->
     <div class="row">
         <div class="flexContainer">
-            <div id="scoreBoxOne">
-
-            </div>
+                <div id="scoreBoxOne">
+                    <p class="scores" id="professorScore"></p>
+                </div>
 
             <div id="scoreBoxTwo">
-
+                    <p class="scores" id="chuckScore"></p>
             </div>
 
         </div>
@@ -38,23 +50,39 @@
     <div class="row">
         <div class="flexContainer">
             <div id="professorPokemon">
-                    <div id="oddishCircle"></div>
-                    <div id="gloomCircle"></div>
-                    <div id="weezingCircle"></div>
+                    <div id="oddishCircle" data="oddish"></div>
+                    <div id="gloomCircle" data="gloom"></div>
+                    <div id="weezingCircle" data="weezing"></div>
             </div>
 
             <div id="chuckPokemon">
-                <div id="dragonairCircle"></div>
-                <div id="butterfreeCircle"></div>
-                <div id="charmeleonCircle"></div>
+                <div id="dragonairCircle" data="dragonair"></div>
+                <div id="butterfreeCircle" data="butterfree"></div>
+                <div id="charmeleonCircle" data="charmeleon"></div>
             </div>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="pokemonNames">
+            <div id="professorNames"><p class="names"></p></div>
+            <div id="chuckNames"><p class="names"></p></div>
+        </div>
+    </div>
 
-
-
+    <div class="row">
+        <div class="stats">
+            <div id="professorStats"></div>
+            <div id="chuckStats"></div>
         </div>
 
+    </div>
 
+    <div class="row">
+        <div class="gifs">
+            <div id="professorGifs"></div>
+            <div id="chuckGifs"></div>
+        </div>
 
 
     </div>
