--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="pokeLogo">
                 <img src="images/pokemon-logo-vector.png" alt="Pokemon Logo">
             </div>
-            <div id="vermillionHeader">
+            <div id="vermillionHeader" class="shadow">
                 Vermillion Gym
             </div>
         </div>
@@ -37,7 +37,7 @@
 
     <!-- Creating score boxes -->
     <div class="row">
-        <div class="flexContainer">
+        <div class="scoreContainer">
                 <div id="scoreBoxOne">
                     <p class="scores" id="professorScore"></p>
                 </div>
@@ -50,7 +50,7 @@
         </div>
 
     <div class="row">
-        <div class="flexContainer">
+        <div class="pokemonContainer">
             <div id="professorPokemon">
                     <div id="oddishCircle" data="oddish"></div>
                     <div id="gloomCircle" data="gloom"></div>
@@ -67,15 +67,15 @@
 
     <div class="row">
         <div class="pokemonNames">
-            <div id="professorNames"><p class="names"></p></div>
-            <div id="chuckNames"><p class="names"></p></div>
+            <div id="professorNames"><p class="names">Placeholder</p></div>
+            <div id="chuckNames"><p class="names">Placeholder</p></div>
         </div>
     </div>
 
     <div class="row">
         <div class="stats">
-            <div id="professorStats"></div>
-            <div id="chuckStats"></div>
+            <div id="professorStats" class="statsBox"></div>
+            <div id="chuckStats" class="statsBox"></div>
         </div>
 
     </div>
