Created boxes for player names, aligned all divs, set placeholders

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <div class="row">
             <div class="flexContainer">
-                <div id="grimName">
+                <div class="nameBox" id="grimBox">
                     Professor Grim
                 </div>
-                <div id="chuckName">
-                    Chuck
+                <div class="nameBox" id="chuckBox">
+                  Chuck
                 </div>
             </div>
 
@@ -38,12 +38,12 @@
     <!-- Creating score boxes -->
     <div class="row">
         <div class="scoreContainer">
-                <div id="scoreBoxOne">
-                    <p class="scores" id="professorScore"></p>
+                <div class="scoreBoxOne" id="professorScore">
+                    1
                 </div>
 
-            <div id="scoreBoxTwo">
-                    <p class="scores" id="chuckScore"></p>
+            <div class="scoreBoxTwo" id="chuckScore">
+                    1
             </div>
 
             </div>
