Used flexbox to center scores within score boxes, tidied up border sizes, colors and styles, changed fonts to create consistency of style, added text decoration to Pokemon names placeholders

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="row">
             <div class="flexContainer">
-                <div class="nameBox" id="grimBox">
+                <div class="nameBox" class="pulse" id="grimBox">
                     Professor Grim
                 </div>
                 <div class="nameBox" id="chuckBox">
