--- a/index.html
+++ b/index.html
@@ -29,62 +29,66 @@
                     Professor Grim
                 </div>
                 <div class="nameBox" id="chuckBox">
-                  Chuck
+                    Chuck
                 </div>
             </div>
 
         </div>
 
-    <!-- Creating score boxes -->
-    <div class="row">
-        <div class="scoreContainer">
+        <!-- Creating score boxes -->
+        <div class="row">
+            <div class="scoreContainer">
                 <div class="scoreBoxOne" id="professorScore">
                     1
                 </div>
 
-            <div class="scoreBoxTwo" id="chuckScore">
+                <div class="scoreBoxTwo" id="chuckScore">
                     1
-            </div>
+                </div>
 
             </div>
         </div>
 
-    <div class="row">
-        <div class="pokemonContainer">
-            <div id="professorPokemon">
-                    <div id="oddishCircle" data="oddish"></div>
-                    <div id="gloomCircle" data="gloom"></div>
-                    <div id="weezingCircle" data="weezing"></div>
+        <div class="row">
+            <div class="pokemonContainer">
+                <div id="professorPokemon">
+                    <div id="oddishCircle" class="spinningButton" data="oddish"></div>
+                    <div id="gloomCircle" class="spinningButton" data="gloom"></div>
+                    <div id="weezingCircle" class="spinningButton" data="weezing"></div>
+                </div>
+
+                <div id="chuckPokemon">
+                    <div id="dragonairCircle" class="spinningButton" data="dragonair"></div>
+                    <div id="butterfreeCircle" class="spinningButton" data="butterfree"></div>
+                    <div id="charmeleonCircle" class="spinningButton" data="charmeleon"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="pokemonNames">
+                <div id="professorNames">
+                    <p class="names">Placeholder</p>
+                </div>
+                <div id="chuckNames">
+                    <p class="names">Placeholder</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="stats">
+                <div id="professorStats" class="statsBox"></div>
+                <div id="chuckStats" class="statsBox"></div>
             </div>
 
-            <div id="chuckPokemon">
-                <div id="dragonairCircle" data="dragonair"></div>
-                <div id="butterfreeCircle" data="butterfree"></div>
-                <div id="charmeleonCircle" data="charmeleon"></div>
+        </div>
+
+        <div class="row">
+            <div class="gifs">
+                <div id="professorGifs"></div>
+                <div id="chuckGifs"></div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="pokemonNames">
-            <div id="professorNames"><p class="names">Placeholder</p></div>
-            <div id="chuckNames"><p class="names">Placeholder</p></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="stats">
-            <div id="professorStats" class="statsBox"></div>
-            <div id="chuckStats" class="statsBox"></div>
-        </div>
-
-    </div>
-
-    <div class="row">
-        <div class="gifs">
-            <div id="professorGifs"></div>
-            <div id="chuckGifs"></div>
-        </div>
 
 
         </div>
