--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <div class="row">
             <div class="pokemonNames">
                 <div id="professorNames">
-                    <p class="names">Placeholder</p>
+                    <!-- <p class="names">Placeholder</p> -->
                 </div>
                 <div id="chuckNames">
-                    <p class="names">Placeholder</p>
+                    <!-- <p class="names">Placeholder</p> -->
                 </div>
             </div>
         </div>
