Saving most recent (working) draft before doing git trouble-shooting

--- a/temp-html.html
+++ b/temp-html.html
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+    <!-- adding something for git trouble-shooting -->
 
     <!-- JAMIE's BUTTONS:  (added a class and a data tag:) -->
     <div id="professorPokemon">
